Tweak elimination stage spacings, add header button to main website, fix group stage modal

--- a/AJFIlfovWebsite/wwwroot/css/Turnee/Elimination2.css
+++ b/AJFIlfovWebsite/wwwroot/css/Turnee/Elimination2.css
@@ -143,7 +143,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(-80%);
+    transform: translateY(-120%);
     color: #000000;
     text-align: center;
 }
